--- a/ndse/homeworks/002-console/package.json
+++ b/ndse/homeworks/002-console/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "bin": {
-    "date-util": "./bin/index.js"
+    "date-util": "./bin/date-util.js"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -12,6 +12,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "luxon": "^3.4.0",
     "yargs": "^17.7.2"
   }
 }
