Add solution for task 1.2 (guess-number)

--- a/ndse/homeworks/002-console/package.json
+++ b/ndse/homeworks/002-console/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "bin": {
-    "date-util": "./bin/date-util.js"
+    "date-util": "./bin/date-util.js",
+    "guess-number": "./bin/guess-number.js"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
