Add solution for task '004-stream' part 1

--- a/ndse/homeworks/004-stream/package.json
+++ b/ndse/homeworks/004-stream/package.json
@@ -3,6 +3,9 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+  "bin": {
+    "heads-or-tails": "./bin/heads-or-tails.js"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
