--- a/ndse/homeworks/004-stream/package.json
+++ b/ndse/homeworks/004-stream/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "bin": {
-    "heads-or-tails": "./bin/heads-or-tails.js"
+    "heads-or-tails": "./bin/heads-or-tails.js",
+    "heads-or-tails-stats": "./bin/heads-or-tails-stats.js"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
